# Chinese-color-universe

./: .gitignore  README.md  run.sh
backend/: ds_services.py  main.py  requirements.txt
backend/tests/: test_ds.py
cpp/: CMakeLists.txt
cpp/include/: algorithms.hpp  array.hpp  graph.hpp  hash_table.hpp  kdtree.hpp  linked_list.hpp  lru_cache.hpp  queue.hpp  stack.hpp  tree.hpp  trie.hpp  union_find.hpp
cpp/src/: algorithms.cpp  array.cpp  graph.cpp  hash_table.cpp  kdtree.cpp  linked_list.cpp  lru_cache.cpp  main.cpp  priority_queue.cpp  queue.cpp  stack.cpp  tree.cpp  trie.cpp  union_find.cpp
data/: color_groups.json  colors.json  cultural_map.json
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Collections.jsx  ColorDetail.jsx  ColorExploration.jsx  ColorGallery.jsx  ColorMap.jsx  ColorMatch.jsx  ColorUniverse.jsx  CulturalGraph.jsx  CulturalMap.jsx  Dashboard.jsx  DataDashboard.jsx  Home.jsx  KnowledgeGraph.jsx  TodayColor.jsx
frontend/src/utils/: constellation.js
scripts/: build-map-from-colors.js  merge-colors.js
universe/: README.md  package-lock.json  package.json  pnpm-lock.yaml
universe/public/data/: colors.json  cultural_map.json  cultural_relations.json
universe/src/app/: globals.css  layout.tsx  page.tsx
universe/src/app/galaxy/: page.tsx
universe/src/app/knowledge/: page.tsx
universe/src/app/map/: page.tsx
universe/src/app/timeline/: page.tsx
universe/src/app/today/: page.tsx
universe/src/store/: selection.store.ts
(+75 files in other folders)
